--- a/index.html
+++ b/index.html
@@ -44,13 +44,25 @@
         <h2><a href="https://ios.cfw.guide/saving-blobs/">Save your Blobs!</a></h2>
         <p>Saving your blobs gives you the option to downgrade or upgrade freely when jailbroken. This means if your version gets a jailbreak, then a newer version gets one, you can upgrade to that specific version with blobs.</p>
     </div>
-    <div class="container links">
-        <h1>Links</h1>
-        <h2 style="line-height: 40px;">
+    <div class="container">
+        <h2>Found a bug? Want something added?</h2>
+        <p style="line-height: 30px;">
+            <a href="https://github.com/BluDood/CanIJailbreak/issues/new?assignees=BluDood&labels=&template=feature_request.md&title=%5BFeature+Request%5D+" target="_blank">Feature request</a>
+            <br>
+            <a href="https://github.com/BluDood/CanIJailbreak/issues/new?assignees=BluDood&labels=&template=add-a-jailbreak.md&title=%5BJB+Request%5D+" target="_blank">Suggest a jailbreak for this site</a>
+            <br>
+            <a href="https://github.com/BluDood/CanIJailbreak/issues/new?assignees=BluDood&labels=&template=add-a-vulnerability.md&title=%5BVuln+Request%5D+" target="_blank">Suggest a vulnerability for this site</a>
+            <br>
+            <a href="https://github.com/BluDood/CanIJailbreak/issues/new?assignees=BluDood&labels=&template=bug_report.md&title=%5BBUG%5D+" target="_blank">Bug Report</a>
+        </p>
+    </div>
+    <div class="container">
+        <h2>Links</h2>
+        <p style="line-height: 30px;">
             <a href="wiki">Wiki</a><br>
-            <a href="https://canijailbreak.com/">Can I Jailbreak by IPSW.me</a><br>
-            <a href="https://bludood.com">My Website</a>
-        </h2>
+            <a href="https://canijailbreak.com/" target="_blank">Can I Jailbreak by IPSW.me</a><br>
+            <a href="https://bludood.com" target="_blank">My Website</a>
+        </p>
     </div>
     <br><br><br><br>
     <div class="footer">
