Minor update - All jailbreaks and vulnerabilities in a list   - You can show and hide the list   - It will be displayed regardless of OS - Fix iOS background (once again) - Last item of list will not have line at the bottom - Formatted some code - Add notes for jailbreaks too - Info for unc0ver 14.4 - 14.8 - Instead of removing a number, only show it

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="notice15" style="display: none;"><i style="color: #007ACC;" class="fas fa-info-circle"></i> iOS 15
             jailbreaks must be rootless. <br> <a href="./wiki/rootless/">What does this mean?</a></p>
     </div>
-    <div class="container jailbreaks">
+    <div class="container jailbreaks list">
     </div>
     <div class="container suggestions">
         <h2><a href="https://ios.cfw.guide/saving-blobs/">Save your Blobs!</a></h2>
@@ -55,6 +55,16 @@
             <br>
             <a href="https://github.com/BluDood/CanIJailbreak/issues/new?assignees=BluDood&labels=&template=bug_report.md&title=%5BBUG%5D+" target="_blank">Bug Report</a>
         </p>
+    </div>
+    <div class="container alljb">
+        <h2>All Jailbreaks</h2>
+        <div class="list"></div>
+        <button>Expand/Collapse</button>
+    </div>
+    <div class="container allvuln">
+        <h2>All Vulnerabilies</h2>
+        <div class="list"></div>
+        <button>Expand/Collapse</button>
     </div>
     <div class="container">
         <h2>Links</h2>
